--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ img {
     height: 120px;
     object-fit: cover;
     margin-bottom: 20px;
-    box-shadow: 0px 10px 35px rgba(0,0,0,0.5);
+    box-shadow: 0px 10px 35px rgba(255, 255, 255, 0.5);
 }
 
 /* 5. Inputs y Botones (Ancho Adaptable) */
