--- a/style.css
+++ b/style.css
@@ -197,6 +197,15 @@ input, .password {
 #menu-toggle:checked ~ .menu-icon span:nth-child(2) { opacity: 0; }
 #menu-toggle:checked ~ .menu-icon span:nth-child(3) { transform: translateY(-8px) rotate(-45deg); }
 
+.menu-panel a:hover { color: #ff0000 !important; }
+
+.menu-panel a {
+    color: white !important;
+    text-decoration: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    transition: 0.3s;}
+
 .menu-panel a {
     color: white !important;
     text-decoration: none;
@@ -204,7 +213,18 @@ input, .password {
     text-transform: uppercase;
 }
 
-@keyframes entrada {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
+.menu-panel a:hover { color: #ff0000 !important; } input, .password, .myButton {
+    width: 100% !important;
+    height: 45px;
+    margin: 5px 0;
+    border-radius: 10px;
+    border: none;
+}/* 1. Reset y Ajuste de Pantalla (CLAVE PARA EVITAR SCROLL) */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
+
+
+  
